--- a/src/views/pages/error.ejs
+++ b/src/views/pages/error.ejs
@@ -1,21 +1,20 @@
 <%- include('../partials/header') %>
 
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-8">
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-12">
             <div class="card">
-                <div class="card-body text-center">
-                    <h1 class="card-title text-danger mb-4">Oops! Algo deu errado</h1>
-                    <p class="card-text mb-4"><%= message %></p>
-                    
-                    <% if (error && Object.keys(error).length > 0) { %>
+                <div class="card-header bg-danger text-white">
+                    <h4 class="mb-0">Erro</h4>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title"><%= message %></h5>
+                    <% if (error && process.env.NODE_ENV === 'development') { %>
                         <div class="alert alert-danger">
-                            <h5>Detalhes do Erro:</h5>
-                            <pre class="mb-0"><%= JSON.stringify(error, null, 2) %></pre>
+                            <pre><%= JSON.stringify(error, null, 2) %></pre>
                         </div>
                     <% } %>
-
-                    <a href="/" class="btn btn-primary">Voltar para a Página Inicial</a>
+                    <a href="/" class="btn btn-primary">Voltar para a página inicial</a>
                 </div>
             </div>
         </div>
