--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -87,6 +87,12 @@
                             <span>Inscrições</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/event-feedbacks">
+                            <i class="fas fa-comment-alt"></i>
+                            <span>Feedbacks</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
