--- a/src/views/pages/inscriptions.ejs
+++ b/src/views/pages/inscriptions.ejs
@@ -14,7 +14,7 @@
                 Lista de Inscrições
             </div>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#inscriptionModal">
-                <i class="fas fa-plus"></i> certo Nova Inscrição
+                <i class="fas fa-plus"></i> Nova Inscrição
             </button>
         </div>
         <div class="card-body">
